--- a/app/templates/solarBeam/gestor/gestor_ofertas.html
+++ b/app/templates/solarBeam/gestor/gestor_ofertas.html
@@ -118,11 +118,11 @@
                                     </td>
                                     <td class="align-middle">
                                         {% if oferta.pre_dimensionamiento.status_gestor %}
-                                        <a href="{{ url_for('solarbeam.gestor_oferta_info', id_oferta=oferta.id) }}"
+                                        <a href="{{ url_for('solarbeam_gestor.gestor_oferta_info', id_oferta=oferta.id) }}"
                                             class="text-info font-weight-bold">Falta confirmación de
                                             comprador</a>
                                         {% else %}
-                                        <a href="{{ url_for('solarbeam.gestor_oferta_info', id_oferta=oferta.id) }}"
+                                        <a href="{{ url_for('solarbeam_gestor.gestor_oferta_info', id_oferta=oferta.id) }}"
                                             class="btn btn-danger">Falta confirmación</a>
                                         {% endif %}
                                     </td>
@@ -176,7 +176,7 @@
                                         <span class="text-secondary font-weight-bold">En espera de la confirmación del
                                             comprador</span>
                                         {% else %}
-                                        <a href="{{ url_for('solarbeam.gestor_oferta_dim_conf', id_oferta=oferta.id) }}"
+                                        <a href="{{ url_for('solarbeam_gestor.gestor_oferta_dim_conf', id_oferta=oferta.id) }}"
                                             class="btn btn-danger">Confirmar datos técnicos</a>
                                         {% endif %}
                                     </td>
@@ -222,20 +222,30 @@
                             <thead>
                                 <th>Nombre</th>
                                 <th>Email de comprador</th>
+                                <th>Email de integrador</th>
                                 <th>Capacidad mínima en kWp</th>
                                 <th>Capacidad máxima en kWac</th>
+                                <th>Precio</th>
                             </thead>
                             <tbody>
                                 {% for oferta in ofertas_insta %}
                                 <tr>
-                                    <td>{{oferta.nombre}}</td>
+                                    <td class="align-middle">{{oferta.nombre}}</td>
                                     {% if oferta.gestor %}
-                                    <td>{{oferta.comprador.user.email}}</td>
+                                    <td class="align-middle">{{oferta.comprador.user.email}}</td>
                                     {% else %}
-                                    <td>Ningún gestor ha aceptado la oferta</td>
+                                    <td class="align-middle">Ningún gestor ha aceptado la oferta</td>
                                     {% endif %}
-                                    <td>{{oferta.min_wp}}</td>
-                                    <td>{{oferta.max_kw}}</td>
+                                    <td class="align-middle">
+                                        {{oferta.adquisicion.oferta_proveedor.integrador.user.email}}</td>
+                                    <td class="align-middle">{{oferta.min_wp}}</td>
+                                    <td class="align-middle">{{oferta.max_kw}}</td>
+                                    <td class="align-middle">{{
+                                        "${:,.2f}".format(oferta.adquisicion.oferta_proveedor.precio) }}
+                                    </td>
+                                    <td class="align-middle">
+                                        <a class="btn btn-primary" href="#">Confirmar instalación</a>
+                                    </td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
