--- a/app/templates/solarBeam/comprador/comprador_ofertas.html
+++ b/app/templates/solarBeam/comprador/comprador_ofertas.html
@@ -261,6 +261,7 @@
                                 <th>Capacidad mínima en kWp</th>
                                 <th>Capacidad máxima en kWac</th>
                                 <th>Precio</th>
+                                <th>Confirmación</th>
                             </thead>
                             <tbody>
                                 {% for oferta in ofertas_insta %}
@@ -279,7 +280,16 @@
                                         "${:,.2f}".format(oferta.adquisicion.oferta_proveedor.precio) }}
                                     </td>
                                     <td class="align-middle">
-                                        <a class="btn btn-primary" href="#">Confirmar instalación</a>
+                                        {% if not oferta.instalacion.confirmacion_comprador %}
+                                        <a class="btn btn-primary"
+                                            href="{{ url_for('solarbeam_comprador.comprador_oferta_instalacion_conf', id_oferta=oferta.id) }}">Confirmar
+                                            instalación</a>
+                                        {% else %}
+                                        <a class="btn btn-success"
+                                            href="{{ url_for('solarbeam_comprador.comprador_oferta_instalacion_conf', id_oferta=oferta.id) }}">
+                                            Esperando confirmación de gestor e integrador
+                                        </a>
+                                        {% endif %}
                                     </td>
                                 </tr>
                                 {% endfor %}
