--- a/app/templates/solarBeam/gestor/gestor_ofertas.html
+++ b/app/templates/solarBeam/gestor/gestor_ofertas.html
@@ -226,6 +226,7 @@
                                 <th>Capacidad mínima en kWp</th>
                                 <th>Capacidad máxima en kWac</th>
                                 <th>Precio</th>
+                                <th>Confirmación</th>
                             </thead>
                             <tbody>
                                 {% for oferta in ofertas_insta %}
@@ -244,7 +245,16 @@
                                         "${:,.2f}".format(oferta.adquisicion.oferta_proveedor.precio) }}
                                     </td>
                                     <td class="align-middle">
-                                        <a class="btn btn-primary" href="#">Confirmar instalación</a>
+                                        {% if not oferta.instalacion.confirmacion_gestor %}
+                                        <a class="btn btn-primary"
+                                            href="{{ url_for('solarbeam_gestor.gestor_oferta_inst_conf', id_oferta=oferta.id) }}">Confirmar
+                                            instalación</a>
+                                        {% else %}
+                                        <a class="btn btn-success"
+                                            href="{{ url_for('solarbeam_gestor.gestor_oferta_inst_conf', id_oferta=oferta.id) }}">
+                                            En espera de confirmación de integrador y comprador
+                                        </a>
+                                        {% endif %}
                                     </td>
                                 </tr>
                                 {% endfor %}
