--- a/app/templates/solarBeam/integrador/integrador_proyectos.html
+++ b/app/templates/solarBeam/integrador/integrador_proyectos.html
@@ -91,6 +91,7 @@
                                 <th>Capacidad mínima en kWp</th>
                                 <th>Capacidad máxima en kWac</th>
                                 <th>Precio</th>
+                                <th>Confirmación</th>
                             </thead>
                             <tbody>
                                 {% for oferta in ofertas_en_instalacion %}
@@ -103,7 +104,16 @@
                                     <td class="align-middle">{{
                                         "${:,.2f}".format(oferta.adquisicion.oferta_proveedor.precio) }}</td>
                                     <td class="align-middle">
-                                        <a class="btn btn-primary" href="#">Confirmar instalación</a>
+                                        {% if not oferta.instalacion.confirmacion_integrador %}
+                                        <a class="btn btn-primary"
+                                            href="{{ url_for('solarbeam_integrador.integrador_oferta_instalacion_conf', id_oferta=oferta.id) }}">Confirmar
+                                            instalación</a>
+                                        {% else %}
+                                        <a class="btn btn-success"
+                                            href="{{ url_for('solarbeam_integrador.integrador_oferta_instalacion_conf', id_oferta=oferta.id) }}">
+                                            Esperando confirmación de gestor y comprador
+                                        </a>
+                                        {% endif %}
                                     </td>
                                 </tr>
                                 {% endfor %}
