cambios en el logo y traduccion del footer

--- a/app/templates/static_pages/includes/footer.html
+++ b/app/templates/static_pages/includes/footer.html
@@ -12,8 +12,8 @@
 
                     <!-- For Retina Ready displays take a image with double the amount of pixels that your image will be 
                         displayed (e.g 350 x 82  pixels) -->
-                    <img src="{{ url_for('static', filename='images/logo-01.png') }}" width="175" height="41"
-                        alt="footer-logo">
+                    <img src="{{ url_for('static', filename='images/skyterra.png') }}" width="175" height="41"
+                        alt="SkyTerra-logo">
 
                     <!-- Text -->
                     <p class="grey-color mt-25">Aliquam nullam tempor sapien gravida donec congue ipsum a porta
@@ -30,21 +30,15 @@
                 <div class="footer-links mb-40">
 
                     <!-- Title -->
-                    <h6 class="h6-lg">Company</h6>
+                    <h6 class="h6-lg">Compañía</h6>
 
                     <!-- Footer List -->
                     <ul class="clearfix grey-color">
                         <li>
-                            <p><a href="#">About Us</a></p>
+                            <p><a href="#">Acerca de nosotros</a></p>
                         </li>
                         <li>
-                            <p><a href="#">Contact Us</a></p>
-                        </li>
-                        <li>
-                            <p><a href="#">Career</a></p>
-                        </li>
-                        <li>
-                            <p><a href="#">Advertising</a></p>
+                            <p><a href="#">Contacto</a></p>
                         </li>
                     </ul>
 
@@ -57,21 +51,18 @@
                 <div class="footer-links mb-40">
 
                     <!-- Title -->
-                    <h6 class="h6-lg">Resources</h6>
+                    <h6 class="h6-lg">Recursos</h6>
 
                     <!-- Footer Links -->
                     <ul class="clearfix grey-color">
                         <li>
-                            <p><a href="#">Our Blog</a></p>
+                            <p><a href="#">Blog</a></p>
                         </li>
                         <li>
-                            <p><a href="#">Help Center</a></p>
+                            <p><a href="#">Centro de ayuda</a></p>
                         </li>
                         <li>
-                            <p><a href="#">Terms & Privacy</a></p>
-                        </li>
-                        <li>
-                            <p><a href="#">Site Map</a></p>
+                            <p><a href="#">Términos y Privacidad</a></p>
                         </li>
                     </ul>
 
