--- a/app/templates/static_pages/includes/header.html
+++ b/app/templates/static_pages/includes/header.html
@@ -2,7 +2,7 @@
     <div class="header-wrapper">
         <!-- MOBILE HEADER -->
         <div class="wsmobileheader clearfix">
-            <span class="smllogo"><img src="{{ url_for('static', filename='images/logo-01.png') }}" width="155"
+            <span class="smllogo"><img src="{{ url_for('static', filename='images/skyterra.png') }}" width="155"
                     height="36" alt="mobile-logo" /></span>
             <a id="wsnavtoggle" href="/" class="wsanimated-arrow"><span></span></a>
         </div>
@@ -13,10 +13,10 @@
             <div class="wsmainwp clearfix">
                 <!-- LOGO IMAGE -->
                 <div class="desktoplogo"><a href="/" class="logo-black"><img
-                            src="{{ url_for('static', filename='images/logo-01.png') }}" width="155" height="36"
+                            src="{{ url_for('static', filename='images/skyterra.png') }}" width="155" height="36"
                             alt="header-logo"></a></div>
                 <div class="desktoplogo"><a href="/" class="logo-white"><img
-                            src="{{ url_for('static', filename='images/logo-white.png') }}" width="155" height="36"
+                            src="{{ url_for('static', filename='images/skyterra-white.png') }}" width="155" height="36"
                             alt="header-logo"></a></div>
 
 
